<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_6x"
    app:cardCornerRadius="@dimen/margin_2x"
    app:cardElevation="@dimen/margin_4x"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_2x">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            style="@style/CustomFont_Title_Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_4x"
            android:layout_marginEnd="@dimen/margin_2x"
            android:contentDescription="@string/app_name"
            android:text="@string/title_payment_info"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_desc"
            style="@style/CustomFont_SubTitle_Black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_2x"
            android:layout_marginEnd="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_3x"
            tools:text="@string/payment_general_desc"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ok"
            style="@style/Button_font_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_2x"
            android:layout_marginTop="@dimen/margin_4x"
            android:layout_marginBottom="@dimen/margin_3x"
            android:text="@string/str_ok"
            android:visibility="visible"
            android:textAllCaps="false"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold"
            app:backgroundTint="@color/colorPrimaryDark"
            app:cornerRadius="@dimen/margin_1x"
            app:iconGravity="textStart"
            tools:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_desc"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>