<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_6x"
    app:cardCornerRadius="@dimen/margin_2x"
    app:cardElevation="@dimen/margin_4x"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_5x">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lbl_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomFont_Normal_Gray"
            android:textColor="@color/colorBlack_1x"
            android:text="@string/str_are_you_sure_you_want_to_log_out"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomFont_Normal_Black"
            android:text="@string/str_cancel_cap"
            android:textColor="@color/colorSecondary"
            android:letterSpacing="0.2"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"
            android:layout_marginTop="@dimen/size_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_logout"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomFont_Normal_Black"
            android:text="@string/str_okay"
            android:textColor="@color/colorPrimary"
            android:letterSpacing="0.2"
            android:textStyle="bold"
            android:background="?attr/selectableItemBackground"
            android:layout_marginEnd="@dimen/margin_4x"
            app:layout_constraintTop_toTopOf="@id/tv_dialog_cancel"
            app:layout_constraintEnd_toStartOf="@id/tv_dialog_cancel"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>