<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_login_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_lunch"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_3x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            style="@style/CustomFont_Normal_Black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/lbl_username"
            android:inputType="text"
            android:textColorHint="@color/colorBlack" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_3x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ly_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            style="@style/CustomFont_Normal_Black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/lbl_password"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/size_40"
            android:textColorHint="@color/colorBlack"
            tools:text="akdfjadskfjasdlfjadskfjadsklfjadslkfj;adslkfjdslfjsdl" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_password"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingTop="@dimen/margin_1x"
        android:paddingEnd="@dimen/margin_3x"
        android:src="@drawable/ic_baseline_visibility_off_24"
        app:layout_constraintBottom_toBottomOf="@id/ly_password"
        app:layout_constraintEnd_toEndOf="@id/ly_password"
        app:layout_constraintTop_toTopOf="@id/ly_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/Button_font_theme"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_40"
        android:layout_marginStart="@dimen/margin_3x"
        android:layout_marginTop="@dimen/size_35"
        android:layout_marginEnd="@dimen/margin_3x"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minHeight="0dp"
        android:text="@string/str_login"
        android:textAllCaps="false"
        android:textSize="@dimen/text_normal"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ly_password" />

</androidx.constraintlayout.widget.ConstraintLayout>